--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8u181-jdk
+      - image: 'circleci/openjdk:latest'
     steps:
       - checkout
       - run: mvn clean install
