circleci config update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,6 @@ jobs:
       - run: mvn test
       - run: bash <(curl -s https://codecov.io/bash) -v
       - store_test_results:
-          path: ~/test-results
+          path: target/surefire-reports
       - store_artifacts:
           path: ~/test-results/junit
