circleci config update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,4 @@ jobs:
       - store_test_results:
           path: target/surefire-reports
       - store_artifacts:
-          path: ~/test-results/junit
+          path: target
