--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ jobs:
       - checkout
       - run: mvn clean install
       - run: mvn test
-      - run: bash <(curl -s https://codecov.io/bash) -v
+      - run: mvn cobertura:cobertura
+      - run: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
           path: target/surefire-reports
       - store_artifacts:
