--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Postgres
 spring.datasource.url=jdbc:postgresql://SG-bookmarkurl-1060-pgsql-master.servers.mongodirector.com:5432/postgres
 spring.datasource.username=sgpostgres
-spring.datasource.password=A9XLeV&8LLveBnPj
-
+spring.datasource.password=9YJKNbEcYjr$mNcl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
