--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8082
 
 spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.location=${java.io.tmpdir}
@@ -13,9 +13,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 #Postgres
-spring.datasource.url=jdbc:postgresql://SG-bookmarkurl-1060-pgsql-master.servers.mongodirector.com:5432/postgres
-spring.datasource.username=sgpostgres
-spring.datasource.password=9YJKNbEcYjr$mNcl
+spring.datasource.url=jdbc:postgresql://ec2-34-235-52-21.compute-1.amazonaws.com:9999/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
